<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Naiz</string>
    <string name="dot">dot</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="landing_image" translatable="false">Image Onboarding</string>
    <string name="register_greeting">Belum Punya Akun?\nDaftar Sekarang</string>
    <string name="register_desc">Buat Akun agar Dapat Menjelajahi Fitur Kami dengan Memasukkan Informasi Berikut</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="create_account">Buat Akun</string>
    <string name="email">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="create_new_account">Buat Akun Baru</string>
    <string name="lupa_password">Lupa Kata Sandi?</string>
    <string name="login_greet">Halo,\nLogin Sekarang</string>
    <string name="login_desc">Masukkan Informasi Akun Anda Untuk Bisa Menggunakan Akun Anda</string>
    <string name="take_a_picture">Scan Foto</string>
    <string name="title_home">Home Page</string>
    <string name="title_quiz">Quiz Page</string>
    <string name="camera_access_prompt">Beri izin kamera untuk melanjutkan</string>
    <string name="delete_all_bookmark">Hapus semua bookmark</string>
    <string name="user_photo">Foto Pengguna</string>
    <string name="user_name_dummy">Any Name</string>
    <string name="bookmark_candi">Bookmark candi</string>
    <string name="candi_populer" tools:ignore="Typos">Candi Populer</string>
    <string name="lihat_lebih">Lihat lebih</string>
    <string name="candi_image">Gambar candi</string>
    <string name="bookmark_this_candi">Bookmark candi ini</string>
    <string name="progress_jelajah_candi">Progress Jelajah Candi</string>
    <string name="time_greeting">Selamat Pagi</string>
    <string name="selamat_pagi">Selamat Pagi</string>
    <string name="selamat_siang">Selamat Siang</string>
    <string name="selamat_malam">Selamat Malam</string>
    <string name="candi_added_successfully">Candi ditambahkan ke Bookmark</string>
    <string name="candi_deleted_successfully">Candi dihapus dari Bookmark</string>
    <string name="quiz_budaya">Quiz Budaya</string>
    <string name="quiz_status">Status Quiz</string>
    <string name="quiz_banner">Banner Quiz</string>
    <string name="quiz_level" translatable="false">Level %1$d</string>
    <string name="quiz_locked_message">Selesaikan level sebelumnya untuk membuka level ini</string>
    <string name="delete_icon">delete icon</string>
    <string name="delete_all_bookmarks">Hapus Semua Bookmarks?</string>
    <string name="delete_description">Apakah anda yakin akan menghapus semua bookmarks?</string>
    <string name="batalkan">Batalkan</string>
    <string name="delete_continue">Lanjutkan</string>
    <string name="info_title">Ingin Melanjutkan?</string>
    <string name="info_description">Quiz ini telah diselesaikan, apakah anda ingin mengulang quiz ini lagi?</string>
    <string name="semua_candi">Semua Candi</string>
    <string name="candi_location">Lokasi Candi</string>
    <string name="candi_tidak_di_temukan">Candi Tidak di temukan</string>
    <string name="search_not_found_desc">Maaf candi yang anda maksud belum ditemukan, coba masukkan kata kunci lainnya :(</string>
    <string name="candi_disimpan">Candi Disimpan</string>
    <string name="all_bookmark_deleted">Seluruh candi terhapus dari bookmark</string>
    <string name="bookmark_deleted">%1$s Terhapus dari Bookmark</string>
    <string name="candi_assets" translatable="false">Candi assets</string>
    <string name="scan_ornamen">Scan Ornamen</string>
    <string name="rate_level_1">Tidak Bagus</string>
    <string name="rate_level_2">Kurang Bagus</string>
    <string name="rate_level_3">Cukup Bagus</string>
    <string name="rate_level_4">Lumayan Bagus</string>
    <string name="rate_level_5">Sangat bagus</string>
    <string name="rating_title">Beri Rating Candi</string>
    <string name="rating_continue">Konfirmasi</string>
    <string name="ornament_image">Gambar Ornamen</string>
    <string name="belum_ditemukan">Belum Ditemukan</string>
    <string name="check_logo">Check Logo</string>
    <string name="sudah_ditemukan">Sudah Ditemukan</string>
    <string name="register_success">Registrasi Berhasil, Silahkan Login</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="make_sure_all_form_filled">Pastikan Semua Kolom Terisi</string>
    <string name="make_sure_confirmation_password_matched">Pastikan Konfirmasi Kata Sandi Sesuai</string>
    <string name="detail_ornamen">Detail Ornamen</string>
    <string name="auth_error">Email atau Password Salah</string>
    <string name="quiz_image" translatable="false">Quiz Image</string>
    <string name="next_question">Lanjut</string>
    <string name="quiz_progress" translatable="false">%1$d/%2$d</string>
    <string name="exit_quiz_description">Apakah anda yakin ingin keluar dari quiz? progress anda tidak akan tersimpan jika anda keluar</string>
    <string name="exit_quiz_title">Ingin Keluar Dari Quiz?</string>
    <string name="quiz_start_banner">Quiz Start Banner</string>
    <string name="start_quiz">Mulai Quiz</string>
    <string name="detector_image">Foto Deteksi</string>
    <string name="back_to_homepage">Kembali ke Home Page</string>
    <string name="rescan">Scan lagi</string>
    <string name="result_failed_description">Maaf, terjadi kesalahan dalam mengidentifikasi relief atau gambar yang anda ambil bukan merupakan relief</string>
    <string name="scan_result_title">Hasil Scan</string>
    <string name="scan_failed">Deteksi Gagal</string>
    <string name="scanning_success_description">Horee, anda berhasil menemukan relief baru dari candi ini!!</string>
    <string name="scanning_success">Deteksi sukses</string>
    <string name="scanning_image">Memindai Gambar, Mohon tunggu beberapa saat</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Ubah Kata Sandi</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="logout">Keluar</string>
    <string name="quiz">Quiz</string>
    <string name="ornament">Ornament</string>
    <string name="extension_icon" translatable="false">Extension Icon</string>
    <string name="ornament_count_icon" translatable="false">Ornament Count Icon</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="ulang_kata_sandi_baru">Ulang Kata Sandi Baru</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="rating_template" translatable="false">%.1f (%d reviews)</string>
    <string name="choose_candi">Pilih Candi</string>
    <string name="submit">Lanjutkan</string>
    <string name="scan_result">Hasil Scan</string>
    <string name="your_score">Score anda</string>
    <string name="quiz_success">Selamat anda menyelesaikan quiz dengan baik, coba selesaikan quiz-quiz menarik berikutnya!</string>
    <string name="quiz_failed">Sayang sekali, sedikit lagi anda bisa melewati quiz ini. Yuk belajar lagi sehingga nilai anda meningkat. Jangan patah semangat!</string>

    <string name="similarity">Kemiripan</string>
    <string name="another_relief">Relief Lainnya</string>
    <string-array name="ornament_tab_name">
        <item>@string/similarity</item>
        <item>@string/another_relief</item>
    </string-array>

    <string name="relief">Relief</string>
    <string name="show_map">Tampilkan Peta</string>
    <string name="nearest_candi">Candi Terdekat</string>
    <string name="no_connection">Mohon aktifkan jaringan internet sebelum menggunakan aplikasi</string>
    <string-array name="detail_candi_tab_name">
        <item>@string/relief</item>
        <item>@string/show_map</item>
        <item>@string/nearest_candi</item>
    </string-array>
</resources>