<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".presentation.detector.DetectionResultActivity">

    <ImageView
        android:id="@+id/success_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scanning_success"
        android:src="@drawable/ic_result_success"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/success_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/success_description"
        style="@style/FontSubtitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/scanning_success_description"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/success_logo" />

    <TextView
        android:id="@+id/scan_result_title"
        style="@style/FontH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/scan_result_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/failed_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scan_failed"
        android:src="@drawable/ic_result_empty"
        app:layout_constraintBottom_toTopOf="@id/failed_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/failed_description"
        style="@style/FontCaption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_failed_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_rescan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/failed_logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_rescan"
        style="@style/ActionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/rescan"
        app:layout_constraintBottom_toTopOf="@id/btn_back_to_home"
        app:layout_constraintTop_toBottomOf="@id/failed_description"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btn_back_to_home"
        style="@style/ActionButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_secondary"
        android:text="@string/back_to_homepage"
        android:textAllCaps="false"
        android:textColor="@color/light_blue"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_rescan" />
</androidx.constraintlayout.widget.ConstraintLayout>