<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/info_icon"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@id/info_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/info_title"
                app:tint="@color/red_status" />

            <TextView
                android:id="@+id/info_title"
                style="@style/FontSubtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/delete_all_bookmarks"
                app:layout_constraintLeft_toRightOf="@id/info_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_description"
                style="@style/FontCaption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delete_description"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_title" />

            <TextView
                android:id="@+id/btn_cancel"
                style="@style/FontCaptionMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/batalkan"
                android:textColor="@color/red_status"
                app:layout_constraintBottom_toBottomOf="@id/btn_confirm_delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_confirm_delete" />

            <Button
                android:id="@+id/btn_confirm_delete"
                style="@style/DialogButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/red_status"
                android:text="@string/delete_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>