<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/fragment_home"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/user_photo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/user_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/home_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/time_greeting"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/user_name"
            app:layout_constraintLeft_toRightOf="@id/user_photo"
            app:layout_constraintTop_toTopOf="@id/user_photo" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/user_name_dummy"
            app:layout_constraintBottom_toBottomOf="@id/user_photo"
            app:layout_constraintLeft_toRightOf="@id/user_photo"
            app:layout_constraintTop_toBottomOf="@id/home_greeting" />

        <ImageView
            android:id="@+id/btn_bookmark"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/bookmark_candi"
            android:src="@drawable/ic_bookmarks"
            app:layout_constraintBottom_toBottomOf="@id/user_photo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/user_photo" />

        <View
            android:layout_width="7dp"
            android:layout_height="7dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/notification_dot"
            app:layout_constraintRight_toRightOf="@id/btn_bookmark"
            app:layout_constraintTop_toTopOf="@id/btn_bookmark" />

        <TextView
            android:id="@+id/headline1"
            style="@style/FontH6"
            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/candi_populer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_show_more"
            app:layout_constraintTop_toBottomOf="@id/user_photo" />

        <TextView
            android:id="@+id/btn_show_more"
            android:layout_width="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content"
            android:text="@string/lihat_lebih"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/headline1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/headline1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_candi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/headline1"
            tools:listitem="@layout/item_candi_grid" />

        <TextView
            android:layout_marginHorizontal="20dp"
            android:id="@+id/headline2"
            style="@style/FontH6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/progress_jelajah_candi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_popular_candi" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_progress_candi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline2"
            tools:listitem="@layout/item_progress_candi" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>