<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/user_photo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/user_name"
            style="@style/FontH6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_photo"
            tools:text="Name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_left"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/card_right"
            app:layout_constraintTop_toBottomOf="@id/user_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/ornament_count"
                    style="@style/FontSubtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/dark_gray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="80" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_account_balance"
                    app:layout_constraintTop_toTopOf="@id/ornament_count"
                    app:layout_constraintBottom_toBottomOf="@id/ornament_count"
                    app:layout_constraintRight_toRightOf="parent"
                    android:contentDescription="@string/ornament_count_icon"/>
                <TextView
                    style="@style/FontSubtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/ornament"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ornament_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_right"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp"
            app:layout_constraintLeft_toRightOf="@id/card_left"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name"
            app:layout_constraintTop_toTopOf="@id/card_left">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/quiz_count"
                    style="@style/FontSubtitle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textColor="@color/dark_gray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="80" />
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_extension"
                    app:layout_constraintTop_toTopOf="@id/quiz_count"
                    app:layout_constraintBottom_toBottomOf="@id/quiz_count"
                    app:layout_constraintRight_toRightOf="parent"
                    android:contentDescription="@string/extension_icon"/>
                <TextView
                    style="@style/FontSubtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/quiz"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/quiz_count" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/menu_edit_profile"
            style="@style/FontBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableStart="@drawable/ic_person"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawablePadding="15dp"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:text="@string/edit_profile"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/card_left" />

        <TextView
            android:id="@+id/menu_edit_password"
            style="@style/FontBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawablePadding="15dp"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:text="@string/edit_password"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/menu_edit_profile" />

        <TextView
            android:id="@+id/menu_edit_language"
            style="@style/FontBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_language"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawablePadding="15dp"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:text="@string/change_language"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/menu_edit_password" />

        <TextView
            android:id="@+id/menu_about_app"
            style="@style/FontBody1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_info"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:drawablePadding="15dp"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:text="@string/about_app"
            app:drawableTint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/menu_edit_language" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/bg_btn_logout"
            android:text="@string/logout"
            android:textColor="@color/red_status"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menu_about_app" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>